crates/ppcjit/src/snapshots/ppcjit__test__x86_64_v1_ps_add_acc_disasm.snap
---
source: crates/ppcjit/src/test.rs
expression: disasm
---
  pushq %rbp
  unwind PushFrameRegs { offset_upward_to_caller_sp: 16 }
  movq %rsp, %rbp
  unwind DefineNewFrame { offset_upward_to_caller_sp: 16, offset_downward_to_clobbers: 32 }
  subq $0x30, %rsp
  movq %rbx, 0x10(%rsp)
  unwind SaveReg { clobber_offset: 0, reg: p3i }
  movq %r12, 0x18(%rsp)
  unwind SaveReg { clobber_offset: 8, reg: p12i }
  movq %r13, 0x20(%rsp)
  unwind SaveReg { clobber_offset: 16, reg: p13i }
block0:
  movq %rdx, %rbx
  movq %rsi, %r12
  movq %rdi, %r13
  movl 0x2a8(%rsi), %eax
  shrl $0xd, %eax
  testb $0x1, %al
  jnz     label4; j label1
block3:
  movq %rbx, %rdx
  movq %r12, %rsi
  movq %r13, %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block4:
  movq %r12, %rsi
  movupd 0x88(%rsi), %xmm1
  movupd 0x98(%rsi), %xmm0
  movl 0x28c(%rsi), %ecx
  movl (%rsi), %eax
  movupd 0xa8(%rsi), %xmm2
  movupd 0xb8(%rsi), %xmm5
  movupd 0xc8(%rsi), %xmm6
  leal 0x10(%rax), %eax
  movl %eax, (%rsi)
  addpd %xmm0, %xmm1
  movdqa %xmm1, %xmm3
  addpd %xmm2, %xmm3
  movdqa %xmm3, %xmm4
  addpd %xmm5, %xmm4
  movdqa %xmm4, %xmm0
  addpd %xmm6, %xmm0
  movupd %xmm0, 0x88(%rsi)
  uninit  %xmm2
  xorpd %xmm2, %xmm2
  ucomisd %xmm4, %xmm2
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  ucomisd (%rip), %xmm4
  seta %dl
  movzbl %dl, %edx
  shll $0xe, %edx
  orl %edx, %eax
  ucomisd (%rip), %xmm4
  setnp %dl
  sete %dil
  andl %edi, %edx
  movzbl %dl, %edx
  shll $0xd, %edx
  orl %edx, %eax
  ucomisd (%rip), %xmm4
  setp %dl
  movzbl %dl, %edx
  shll $0xc, %edx
  orl %edx, %eax
  ucomisd %xmm3, %xmm2
  seta %dl
  movzbl %dl, %edx
  shll $0xf, %edx
  ucomisd (%rip), %xmm3
  seta %dil
  movzbl %dil, %edi
  shll $0xe, %edi
  orl %edi, %edx
  ucomisd (%rip), %xmm3
  setnp %dil
  sete %r8b
  andl %r8d, %edi
  movzbl %dil, %edi
  shll $0xd, %edi
  orl %edi, %edx
  ucomisd (%rip), %xmm3
  setp %dil
  movzbl %dil, %edi
  shll $0xc, %edi
  orl %edi, %edx
  ucomisd %xmm1, %xmm2
  seta %dil
  movzbl %dil, %edi
  shll $0xf, %edi
  ucomisd (%rip), %xmm1
  seta %r8b
  movzbl %r8b, %r8d
  shll $0xe, %r8d
  orl %r8d, %edi
  ucomisd (%rip), %xmm1
  setnp %r8b
  sete %r9b
  andl %r9d, %r8d
  movzbl %r8b, %r8d
  shll $0xd, %r8d
  orl %r8d, %edi
  ucomisd (%rip), %xmm1
  setp %r8b
  movzbl %r8b, %r8d
  shll $0xc, %r8d
  orl %r8d, %edi
  orl %ecx, %edi
  orl %edi, %edx
  orl %edx, %eax
  andl $0xfffe0fff, %eax
  ucomisd %xmm0, %xmm2
  seta %dil
  movzbl %dil, %ecx
  shll $0xf, %ecx
  ucomisd (%rip), %xmm0
  seta %dil
  movzbl %dil, %edi
  shll $0xe, %edi
  orl %edi, %ecx
  ucomisd (%rip), %xmm0
  setnp %dil
  sete %r8b
  andl %r8d, %edi
  movzbl %dil, %edi
  shll $0xd, %edi
  orl %edi, %ecx
  ucomisd (%rip), %xmm0
  setp %dil
  movzbl %dil, %edi
  shll $0xc, %edi
  orl %edi, %ecx
  orl %ecx, %eax
  movl %eax, 0x28c(%rsi)
  load_ext_name userextname23+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x80004, %ecx
  load_ext_name userextname1+0, %r8
  movq %r13, %rdi
  call    *%r8
  testq %rax, %rax
  movq %rax, %r10
  jnz     label6; j label5
block6:
  movq %rbx, %rdx
  movq %r12, %rsi
  movq %r13, %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block1:
  movl $0x800, %esi
  load_ext_name userextname0+0, %rax
  movq %r12, %rdi
  call    *%rax
  load_ext_name userextname22+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %rax
  movq %r13, %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label3; j label2
block2:
  movq 0x10(%rsp), %rbx
  movq 0x18(%rsp), %r12
  movq 0x20(%rsp), %r13
  addq $0x30, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block5:
  movq 0x10(%rsp), %rbx
  movq 0x18(%rsp), %r12
  movq 0x20(%rsp), %r13
  addq $0x30, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
