crates/ppcjit/src/snapshots/ppcjit__test__x86_64_v3_gu_vec_scale_disasm.snap
---
source: crates/ppcjit/src/test.rs
expression: disasm
---
  pushq %rbp
  unwind PushFrameRegs { offset_upward_to_caller_sp: 16 }
  movq %rsp, %rbp
  unwind DefineNewFrame { offset_upward_to_caller_sp: 16, offset_downward_to_clobbers: 48 }
  subq $0xa0, %rsp
  movq %rbx, 0x70(%rsp)
  unwind SaveReg { clobber_offset: 0, reg: p3i }
  movq %r12, 0x78(%rsp)
  unwind SaveReg { clobber_offset: 8, reg: p12i }
  movq %r13, 0x80(%rsp)
  unwind SaveReg { clobber_offset: 16, reg: p13i }
  movq %r14, 0x88(%rsp)
  unwind SaveReg { clobber_offset: 24, reg: p14i }
  movq %r15, 0x90(%rsp)
  unwind SaveReg { clobber_offset: 32, reg: p15i }
block0:
  movq %rdx, %r15
  movq %rdi, <offset:1>+8(%rsp)
  movq %rsi, <offset:1>+0x10(%rsp)
  movl 0x2a8(%rsi), %edx
  shrl $0xd, %edx
  testb $0x1, %dl
  jnz     label4; j label1
block3:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block4:
  movq <offset:1>+0x10(%rsp), %rsi
  movl 0x14(%rsi), %r12d
  movl 0x368(%rsi), %edx
  movq %rdx, %r14
  leaq <offset:1>+(%rsp), %rcx
  movq %rcx, %r13
  load_ext_name userextname10+0, %r9
  movq %r12, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%r9
  testb %al, %al
  jnz     label8; j label5
block7:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block8:
  vmovsd <offset:1>+(%rsp), %xmm0
  movdqu %xmm0, <offset:1>+0x58(%rsp)
  movzbl %al, %eax
  leal (%r12, %rax), %ebx
  load_ext_name userextname10+0, %rax
  movq %r14, %rdx
  movq %r13, %rcx
  movq %rbx, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label12; j label9
block11:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block12:
  vmovsd <offset:1>+(%rsp), %xmm0
  movq <offset:1>+0x10(%rsp), %rsi
  movdqu %xmm0, <offset:1>+0x48(%rsp)
  movl (%rsi), %ebx
  movl 0x368(%rsi), %edx
  leal 8(%r12), %esi
  load_ext_name userextname10+0, %rax
  movq %r13, %rcx
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label16; j label13
block15:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block16:
  movdqu <offset:1>+0x58(%rsp), %xmm3
  movdqu <offset:1>+0x48(%rsp), %xmm6
  vmovsd <offset:1>+(%rsp), %xmm0
  movq <offset:1>+0x10(%rsp), %rsi
  movdqu %xmm0, <offset:1>+0x28(%rsp)
  vmovupd 0x98(%rsi), %xmm0
  movl 0x28c(%rsi), %r14d
  movl 0x18(%rsi), %r12d
  movl 0x368(%rsi), %edx
  movq %rdx, <offset:1>+0x38(%rsp)
  uninit  %xmm1
  vxorpd %xmm1, %xmm1, %xmm1
  vmovsd %xmm3, %xmm1, %xmm1
  vmovlhps %xmm6, %xmm1, %xmm1
  vmovdqu (%rip), %xmm2
  vpaddusb (%rip), %xmm2, %xmm2
  vpshufb %xmm2, %xmm0, %xmm0
  vmulpd %xmm0, %xmm1, %xmm2
  movdqu %xmm0, <offset:1>+0x18(%rsp)
  movdqu %xmm2, <offset:1>+0x48(%rsp)
  movdqu %xmm1, <offset:1>+0x58(%rsp)
  load_ext_name userextname11+0, %rax
  movq %r12, %rsi
  movq <offset:1>+8(%rsp), %rdi
  movdqu <offset:1>+0x48(%rsp), %xmm0
  call    *%rax
  testb %al, %al
  jnz     label20; j label17
block19:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block20:
  movzbl %al, %eax
  leal (%r12, %rax), %r13d
  movdqu <offset:1>+0x48(%rsp), %xmm0
  vpshufd $0xee, %xmm0, %xmm0
  load_ext_name userextname11+0, %rax
  movq <offset:1>+0x38(%rsp), %rdx
  movq %r13, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label24; j label21
block23:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block24:
  movq <offset:1>+0x10(%rsp), %rsi
  movdqu <offset:1>+0x28(%rsp), %xmm0
  movl 0x368(%rsi), %edx
  movq %rdx, <offset:1>+0x38(%rsp)
  leal 8(%r12), %r13d
  uninit  %xmm1
  vxorpd %xmm1, %xmm1, %xmm1
  vmovsd %xmm0, %xmm1, %xmm3
  movabsq $0x3ff0000000000000, %rax
  vmovq %rax, %xmm2
  vmovlhps %xmm2, %xmm3, %xmm1
  movdqu <offset:1>+0x18(%rsp), %xmm0
  vmulpd %xmm0, %xmm1, %xmm0
  movdqu %xmm0, <offset:1>+0x18(%rsp)
  movdqu %xmm1, <offset:1>+0x28(%rsp)
  load_ext_name userextname11+0, %rcx
  movq %r13, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rcx
  testb %al, %al
  jnz     label28; j label25
block27:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block28:
  movdqu <offset:1>+0x18(%rsp), %xmm1
  movzbl %al, %eax
  leal 8(%r12, %rax), %r12d
  vpshufd $0xee, %xmm1, %xmm0
  load_ext_name userextname11+0, %rax
  movq <offset:1>+0x38(%rsp), %rdx
  movq %r12, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label32; j label29
block31:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block32:
  movdqu <offset:1>+0x28(%rsp), %xmm0
  movdqu <offset:1>+0x18(%rsp), %xmm1
  leal 0x18(%rbx), %eax
  movq <offset:1>+0x10(%rsp), %rsi
  movl %eax, (%rsi)
  movdqu <offset:1>+0x58(%rsp), %xmm2
  vmovupd %xmm2, 0xa8(%rsi)
  uninit  %xmm2
  vxorpd %xmm2, %xmm2, %xmm2
  movdqu <offset:1>+0x48(%rsp), %xmm3
  vucomisd %xmm3, %xmm2
  seta %al
  movzbl %al, %r9d
  shll $0xf, %r9d
  vucomisd (%rip), %xmm3
  seta %al
  movzbl %al, %eax
  shll $0xe, %eax
  orl %eax, %r9d
  vucomisd (%rip), %xmm3
  setnp %al
  sete %cl
  andl %ecx, %eax
  movzbl %al, %eax
  shll $0xd, %eax
  orl %eax, %r9d
  vucomisd (%rip), %xmm3
  setp %al
  movzbl %al, %eax
  shll $0xc, %eax
  orl %eax, %r9d
  orl %r14d, %r9d
  andl $0xfffe0fff, %r9d
  vucomisd %xmm1, %xmm2
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  vucomisd (%rip), %xmm1
  seta %cl
  movzbl %cl, %ecx
  shll $0xe, %ecx
  orl %ecx, %eax
  vucomisd (%rip), %xmm1
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %eax
  vucomisd (%rip), %xmm1
  setp %cl
  movzbl %cl, %ecx
  shll $0xc, %ecx
  orl %ecx, %eax
  orl %eax, %r9d
  movl %r9d, 0x28c(%rsi)
  vmovupd %xmm1, 0xc8(%rsi)
  vmovupd %xmm0, 0xb8(%rsi)
  load_ext_name userextname30+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0xc0006, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label34; j label33
block34:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block1:
  movl $0x800, %esi
  load_ext_name userextname0+0, %r8
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%r8
  load_ext_name userextname22+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %r8
  movq <offset:1>+8(%rsp), %rdi
  call    *%r8
  testq %rax, %rax
  movq %rax, %r10
  jnz     label3; j label2
block2:
  movq 0x70(%rsp), %rbx
  movq 0x78(%rsp), %r12
  movq 0x80(%rsp), %r13
  movq 0x88(%rsp), %r14
  movq 0x90(%rsp), %r15
  addq $0xa0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block5:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r12d, 0x360(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname23+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label7; j label6
block6:
  movq 0x70(%rsp), %rbx
  movq 0x78(%rsp), %r12
  movq 0x80(%rsp), %r13
  movq 0x88(%rsp), %r14
  movq 0x90(%rsp), %r15
  addq $0xa0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block9:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %ebx, 0x360(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname24+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label11; j label10
block10:
  movq 0x70(%rsp), %rbx
  movq 0x78(%rsp), %r12
  movq 0x80(%rsp), %r13
  movq 0x88(%rsp), %r14
  movq 0x90(%rsp), %r15
  addq $0xa0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block13:
  leal 8(%r12), %eax
  movq <offset:1>+0x10(%rsp), %rsi
  movl %eax, 0x360(%rsi)
  uninit  %xmm0
  vxorpd %xmm0, %xmm0, %xmm0
  movdqu <offset:1>+0x58(%rsp), %xmm3
  vmovsd %xmm3, %xmm0, %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm6
  vmovlhps %xmm6, %xmm0, %xmm0
  vmovupd %xmm0, 0xa8(%rsi)
  leal 4(%rbx), %eax
  movl %eax, (%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname25+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x40002, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label15; j label14
block14:
  movq 0x70(%rsp), %rbx
  movq 0x78(%rsp), %r12
  movq 0x80(%rsp), %r13
  movq 0x88(%rsp), %r14
  movq 0x90(%rsp), %r15
  addq $0xa0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block17:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r12d, 0x360(%rsi)
  leal 0xc(%rbx), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x58(%rsp), %xmm0
  vmovupd %xmm0, 0xa8(%rsi)
  andl $0xfffe0fff, %r14d
  uninit  %xmm0
  vxorpd %xmm0, %xmm0, %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm1
  vucomisd %xmm1, %xmm0
  seta %al
  movzbl %al, %ecx
  shll $0xf, %ecx
  movdqu <offset:1>+0x48(%rsp), %xmm0
  vucomisd (%rip), %xmm0
  seta %al
  movzbl %al, %eax
  shll $0xe, %eax
  orl %eax, %ecx
  vucomisd (%rip), %xmm0
  setnp %al
  sete %dl
  andl %edx, %eax
  movzbl %al, %eax
  shll $0xd, %eax
  orl %eax, %ecx
  vucomisd (%rip), %xmm0
  setp %al
  movzbl %al, %eax
  shll $0xc, %eax
  orl %eax, %ecx
  orl %ecx, %r14d
  movl %r14d, 0x28c(%rsi)
  vmovupd %xmm0, 0xc8(%rsi)
  uninit  %xmm0
  vxorpd %xmm0, %xmm0, %xmm0
  movdqu <offset:1>+0x28(%rsp), %xmm1
  vmovsd %xmm1, %xmm0, %xmm0
  movabsq $0x3ff0000000000000, %rax
  vmovq %rax, %xmm1
  vmovlhps %xmm1, %xmm0, %xmm0
  vmovupd %xmm0, 0xb8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname26+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x80004, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label19; j label18
block18:
  movq 0x70(%rsp), %rbx
  movq 0x78(%rsp), %r12
  movq 0x80(%rsp), %r13
  movq 0x88(%rsp), %r14
  movq 0x90(%rsp), %r15
  addq $0xa0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block21:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r13d, 0x360(%rsi)
  leal 0xc(%rbx), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x58(%rsp), %xmm0
  vmovupd %xmm0, 0xa8(%rsi)
  andl $0xfffe0fff, %r14d
  uninit  %xmm0
  vxorpd %xmm0, %xmm0, %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm1
  vucomisd %xmm1, %xmm0
  seta %al
  movzbl %al, %ecx
  shll $0xf, %ecx
  movdqu <offset:1>+0x48(%rsp), %xmm0
  vucomisd (%rip), %xmm0
  seta %al
  movzbl %al, %eax
  shll $0xe, %eax
  orl %eax, %ecx
  vucomisd (%rip), %xmm0
  setnp %al
  sete %dl
  andl %edx, %eax
  movzbl %al, %eax
  shll $0xd, %eax
  orl %eax, %ecx
  vucomisd (%rip), %xmm0
  setp %al
  movzbl %al, %eax
  shll $0xc, %eax
  orl %eax, %ecx
  orl %ecx, %r14d
  movl %r14d, 0x28c(%rsi)
  vmovupd %xmm0, 0xc8(%rsi)
  uninit  %xmm0
  vxorpd %xmm0, %xmm0, %xmm1
  movdqu <offset:1>+0x28(%rsp), %xmm0
  vmovsd %xmm0, %xmm1, %xmm0
  movabsq $0x3ff0000000000000, %rax
  vmovq %rax, %xmm1
  vmovlhps %xmm1, %xmm0, %xmm0
  vmovupd %xmm0, 0xb8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname27+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x80004, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label23; j label22
block22:
  movq 0x70(%rsp), %rbx
  movq 0x78(%rsp), %r12
  movq 0x80(%rsp), %r13
  movq 0x88(%rsp), %r14
  movq 0x90(%rsp), %r15
  addq $0xa0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block25:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r13d, 0x360(%rsi)
  leal 0x14(%rbx), %esi
  movq <offset:1>+0x10(%rsp), %rax
  movl %esi, (%rax)
  movq <offset:1>+0x10(%rsp), %rsi
  movdqu <offset:1>+0x58(%rsp), %xmm0
  vmovupd %xmm0, 0xa8(%rsi)
  uninit  %xmm5
  vxorpd %xmm5, %xmm5, %xmm7
  movdqu <offset:1>+0x48(%rsp), %xmm0
  vucomisd %xmm0, %xmm7
  seta %dil
  movzbl %dil, %ecx
  shll $0xf, %ecx
  vucomisd (%rip), %xmm0
  seta %r8b
  movzbl %r8b, %edi
  shll $0xe, %edi
  orl %edi, %ecx
  vucomisd (%rip), %xmm0
  setnp %r9b
  sete %r10b
  andl %r10d, %r9d
  movzbl %r9b, %r8d
  shll $0xd, %r8d
  orl %r8d, %ecx
  vucomisd (%rip), %xmm0
  setp %r10b
  movzbl %r10b, %r9d
  shll $0xc, %r9d
  orl %r9d, %ecx
  orl %r14d, %ecx
  andl $0xfffe0fff, %ecx
  movdqu <offset:1>+0x18(%rsp), %xmm1
  vucomisd %xmm1, %xmm7
  seta %r11b
  movzbl %r11b, %eax
  shll $0xf, %eax
  vucomisd (%rip), %xmm1
  seta %dl
  movzbl %dl, %r11d
  shll $0xe, %r11d
  orl %r11d, %eax
  vucomisd (%rip), %xmm1
  setnp %dl
  sete %sil
  andl %esi, %edx
  movzbl %dl, %edx
  shll $0xd, %edx
  orl %edx, %eax
  vucomisd (%rip), %xmm1
  setp %dl
  movzbl %dl, %edx
  shll $0xc, %edx
  orl %edx, %eax
  orl %eax, %ecx
  movq <offset:1>+0x10(%rsp), %rsi
  movl %ecx, 0x28c(%rsi)
  vmovupd %xmm1, 0xc8(%rsi)
  movdqu <offset:1>+0x28(%rsp), %xmm1
  vmovupd %xmm1, 0xb8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname28+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0xc0006, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label27; j label26
block26:
  movq 0x70(%rsp), %rbx
  movq 0x78(%rsp), %r12
  movq 0x80(%rsp), %r13
  movq 0x88(%rsp), %r14
  movq 0x90(%rsp), %r15
  addq $0xa0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block29:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r12d, 0x360(%rsi)
  leal 0x14(%rbx), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x58(%rsp), %xmm0
  vmovupd %xmm0, 0xa8(%rsi)
  uninit  %xmm0
  vxorpd %xmm0, %xmm0, %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm1
  vucomisd %xmm1, %xmm0
  seta %al
  movzbl %al, %ecx
  shll $0xf, %ecx
  vucomisd (%rip), %xmm1
  seta %al
  movzbl %al, %eax
  shll $0xe, %eax
  orl %eax, %ecx
  vucomisd (%rip), %xmm1
  setnp %al
  sete %dl
  andl %edx, %eax
  movzbl %al, %eax
  shll $0xd, %eax
  orl %eax, %ecx
  vucomisd (%rip), %xmm1
  setp %al
  movzbl %al, %eax
  shll $0xc, %eax
  orl %eax, %ecx
  orl %r14d, %ecx
  andl $0xfffe0fff, %ecx
  movdqu <offset:1>+0x18(%rsp), %xmm1
  vucomisd %xmm1, %xmm0
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  vucomisd (%rip), %xmm1
  seta %dl
  movzbl %dl, %edx
  shll $0xe, %edx
  orl %edx, %eax
  vucomisd (%rip), %xmm1
  setnp %dl
  sete %sil
  andl %esi, %edx
  movzbl %dl, %edx
  shll $0xd, %edx
  orl %edx, %eax
  vucomisd (%rip), %xmm1
  setp %dl
  movzbl %dl, %edx
  shll $0xc, %edx
  orl %edx, %eax
  orl %eax, %ecx
  movq <offset:1>+0x10(%rsp), %rsi
  movl %ecx, 0x28c(%rsi)
  vmovupd %xmm1, 0xc8(%rsi)
  movdqu <offset:1>+0x28(%rsp), %xmm0
  vmovupd %xmm0, 0xb8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname29+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0xc0006, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label31; j label30
block30:
  movq 0x70(%rsp), %rbx
  movq 0x78(%rsp), %r12
  movq 0x80(%rsp), %r13
  movq 0x88(%rsp), %r14
  movq 0x90(%rsp), %r15
  addq $0xa0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block33:
  movq 0x70(%rsp), %rbx
  movq 0x78(%rsp), %r12
  movq 0x80(%rsp), %r13
  movq 0x88(%rsp), %r14
  movq 0x90(%rsp), %r15
  addq $0xa0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
